--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
 python-dotenv = "^1.0.0"
 pandas = "1.5.3"
 astor = "^0.8.1"
-openai = "^1.0.0"
+openai = "0.28.1"
 ipython = "^8.13.1"
 matplotlib = "^3.7.1"
 pydantic = "^1"
